Fill Java/Language/NestedClasses